@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
+    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="* Create Header class&#10;* Refactor Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class&#10;* Refactored `opus-primus-header` to reflect class/method changes">
+      <change type="NEW" beforePath="" afterPath="$PROJECT_DIR$/includes/class.OpusPrimusHeader.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" afterPath="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/includes/opus-ignite.php" afterPath="$PROJECT_DIR$/includes/opus-ignite.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/opus-primus-header.php" afterPath="$PROJECT_DIR$/opus-primus-header.php" />
     </list>
     <ignored path="opus-primus.iws" />
@@ -30,7 +33,7 @@
       <file leaf-file-name="opus-primus-header.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/opus-primus-header.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="82" column="54" selection-start="2684" selection-end="2684" vertical-scroll-proportion="-20.192308">
+            <state line="62" column="13" selection-start="1794" selection-end="1794" vertical-scroll-proportion="-13.0">
               <folding>
                 <element signature="e#6#1446#0" expanded="true" />
               </folding>
@@ -38,13 +41,33 @@
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="class.OpusPrimusStructures.php" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="class.OpusPrimusStructures.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="615" column="62" selection-start="24318" selection-end="24318" vertical-scroll-proportion="0.7910906">
+            <state line="575" column="0" selection-start="23208" selection-end="23208" vertical-scroll-proportion="97.88461">
               <folding>
                 <element signature="e#6#1618#0" expanded="true" />
               </folding>
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="class.OpusPrimusHeader.php" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusHeader.php">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="111" column="25" selection-start="2949" selection-end="2949" vertical-scroll-proportion="-72.57692">
+              <folding>
+                <element signature="e#6#1153#0" expanded="true" />
+              </folding>
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/changelog.txt">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="1" column="20" selection-start="54" selection-end="54" vertical-scroll-proportion="0.025110783">
+              <folding />
             </state>
           </provider>
         </entry>
@@ -62,8 +85,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/sidebar-header.php" />
-        <option value="$PROJECT_DIR$/sidebar.php" />
         <option value="$PROJECT_DIR$/single.php" />
         <option value="$PROJECT_DIR$/404.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusPosts.php" />
@@ -72,12 +93,14 @@
         <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/index.php" />
         <option value="$PROJECT_DIR$/header.php" />
-        <option value="$PROJECT_DIR$/changelog.txt" />
         <option value="$PROJECT_DIR$/readme.txt" />
         <option value="$PROJECT_DIR$/css/opus-primus.css" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusBreadcrumbs.php" />
+        <option value="$PROJECT_DIR$/includes/opus-ignite.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
+        <option value="$PROJECT_DIR$/includes/class.OpusPrimusHeader.php" />
         <option value="$PROJECT_DIR$/opus-primus-header.php" />
+        <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
   </component>
@@ -1637,7 +1660,11 @@
       <created>1362871728006</created>
       <updated>1362871728007</updated>
     </task>
-    <option name="localTasksCounter" value="321" />
+    <task id="LOCAL-00321" summary="* Refactor Custom Header image block into its own Structures method">
+      <created>1362888362872</created>
+      <updated>1362888362872</updated>
+    </task>
+    <option name="localTasksCounter" value="322" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1676,6 +1703,7 @@
     <frame x="-8" y="-8" width="1616" height="876" extended-state="6" />
     <editor active="true" />
     <layout>
+      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.328125" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Changes" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.3247768" sideWeight="0.5" order="9" side_tool="false" content_ui="tabs" />
       <window_info id="TODO" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.32587412" sideWeight="0.5" order="6" side_tool="false" content_ui="tabs" />
       <window_info id="Database" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
@@ -1693,7 +1721,6 @@
       <window_info id="Message" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
       <window_info id="Ant Build" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
       <window_info id="Find" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.32307693" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
-      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.328125" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Commander" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Hierarchy" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="2" side_tool="false" content_ui="combo" />
       <window_info id="Inspection" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
@@ -1734,7 +1761,7 @@
     <option name="SHOW_VCS_ERROR_NOTIFICATIONS" value="true" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Documentation corrections and added a todo" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Refactor Custom Header image block into its own Structures method" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1747,7 +1774,6 @@
     <option name="UPDATE_GROUP_BY_CHANGELIST" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="Documentation adjustments to &quot;read&quot; better in a markdown manner" />
     <MESSAGE value="Set theme Version to 1.0 ... almost ready for release!" />
     <MESSAGE value="* Modify the widget descriptions in the First, Second, Third, and Fourth Widget Areas to better explain their relative position and when to expect them to be displayed." />
     <MESSAGE value="* Replace `the_loop` method and surrounding code with `the_loop_wrapped`&#10;* Replace `the_loop_archives` method and surrounding code with `the_loop_archives_wrapped`" />
@@ -1772,21 +1798,12 @@
     <MESSAGE value="* Fix no title issues" />
     <MESSAGE value="* Fix Post Format name being passed to title attribute" />
     <MESSAGE value="* Documentation corrections and added a todo" />
+    <MESSAGE value="* Refactor Custom Header image block into its own Structures method" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="235" column="0" selection-start="9203" selection-end="9203" vertical-scroll-proportion="0.77572966" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/footer.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/opus-primus-footer.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
@@ -1810,11 +1827,6 @@
     <entry file="file://$PROJECT_DIR$/index.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="52" column="67" selection-start="1652" selection-end="1652" vertical-scroll-proportion="0.02560241" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="10" column="45" selection-start="394" selection-end="394" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/readme.txt">
@@ -1849,21 +1861,44 @@
         </state>
       </provider>
     </entry>
+    <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="43" column="31" selection-start="1404" selection-end="1404" vertical-scroll-proportion="1.1009036">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="575" column="0" selection-start="23208" selection-end="23208" vertical-scroll-proportion="97.88461">
+          <folding>
+            <element signature="e#6#1618#0" expanded="true" />
+          </folding>
+        </state>
+      </provider>
+    </entry>
     <entry file="file://$PROJECT_DIR$/opus-primus-header.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="82" column="54" selection-start="2684" selection-end="2684" vertical-scroll-proportion="-20.192308">
+        <state line="62" column="13" selection-start="1794" selection-end="1794" vertical-scroll-proportion="-13.0">
           <folding>
             <element signature="e#6#1446#0" expanded="true" />
           </folding>
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
+    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusHeader.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="615" column="62" selection-start="24318" selection-end="24318" vertical-scroll-proportion="0.7910906">
+        <state line="111" column="25" selection-start="2949" selection-end="2949" vertical-scroll-proportion="-72.57692">
           <folding>
-            <element signature="e#6#1618#0" expanded="true" />
+            <element signature="e#6#1153#0" expanded="true" />
           </folding>
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="1" column="20" selection-start="54" selection-end="54" vertical-scroll-proportion="0.025110783">
+          <folding />
         </state>
       </provider>
     </entry>
